[tool.poetry]
name = "repl-nix-l2-python-internal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_l2_python_internal"}]

[tool.poetry.dependencies]
python = "^3.10"
git-python = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
